t-koma-knowledge/tests/snapshots/codebase_embedding__knowledge_graph_link_resolution.snap
---
source: t-koma-knowledge/tests/codebase_embedding.rs
expression: snapshot
---
query: knowledge graph link resolution parent
total_hits: 8
top_results:
  - rank: 1
    file: knowledge_system.md
    has_parents: true
    tag_count: 0
    links_out: 0
    links_in: 0
    snippet: "- Hybrid: BM25 + embeddings, fused with RRF.\n- Graph expansion includes parent, tags, and 1-hop links.\n\n- `memory_search"
  - rank: 2
    file: graph.rs
    has_parents: true
    tag_count: 0
    links_out: 0
    links_in: 0
    snippet: "pub async fn load_parent(\n    pool: &SqlitePool,\n    note_id: &str,\n    scope: KnowledgeScope,\n    ghost_name: &str,\n) -"
