t-koma-knowledge/tests/snapshots/codebase_embedding__toml_front_matter_parsing.snap
---
source: t-koma-knowledge/tests/codebase_embedding.rs
expression: "build_snapshot(question, results, 2)"
---
query: core source files models search graph
total_hits: 8
top_results:
  - rank: 1
    file: knowledge_system.md
    note_type: ReferenceDocs
    snippet: "- Hybrid: BM25 + embeddings, fused with RRF.\n- Graph expansion includes parent, tags, and 1-hop links.\n\n- `memory_search"
  - rank: 2
    file: search.rs
    note_type: ReferenceCode
    snippet: "pub(crate) async fn search_store(\n    settings: &KnowledgeSettings,\n    embedder: &EmbeddingClient,\n    pool: &SqlitePoo"
